# voitta-rag-enterprise

./: .dockerignore  .env.example  .env.secrets.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSING.md  Makefile  README.md  constraints.txt  docker-compose.yml  pyproject.toml  run-local.sh
.github/workflows/: ci.yml  image.yml  release.yml
.handoffs/: 2026-05-07-gcp-tier-a-deploy.md  README.md
deploy/: Caddyfile.tpl  Dockerfile  README.md  cloud-init.yaml.tftpl  docker-entrypoint.sh
deploy/scripts/: _lib.sh  bootstrap.sh  init.sh  logs.sh  populate_secrets.sh  shell.sh  snapshot.sh  upgrade_image.sh
deploy/systemd/: caddy.service  voitta.service
deploy/terraform/: .env.terraform.example  backups.tf  compute.tf  kms.tf  lb.tf  main.tf  monitoring.tf  network.tf  outputs.tf  secrets.tf  variables.tf  versions.tf
desktop/: build_app.sh  make_app_icon.py  make_menubar_icon.py  pyproject.toml
docs/: API.md  DEPLOY.md  OPERATIONS.md
marketing/: build_voitta_slide.py  overview-diagram.md  voitta_overview.html  voitta_overview_bw.html  voitta_overview_dark_bw.html  voitta_overview_light_bw.html
scripts/: doctor.py  migrate_qdrant.py  prewarm_models.py  rebuild_index.py  reembed_stale.py  remap_qdrant_owners.py  seed_users.py
src/voitta_image_rag/: __init__.py  config.py  logging_config.py  main.py  mcp_server.py
src/voitta_image_rag/api/: __init__.py  deps.py  ws.py
src/voitta_image_rag/api/routes/: auth.py  files.py  folders.py  fs.py  images.py  jobs.py  search.py  sync.py
src/voitta_image_rag/cas/: __init__.py  store.py
src/voitta_image_rag/db/: database.py  models.py  schema.sql
src/voitta_image_rag/services/: acl.py  chunking.py  crypto.py  events.py  ignore.py  indexing.py  job_queue.py  reconcile.py  scanner.py  vector_store.py  worker.py
src/voitta_image_rag/services/embedding/: factory.py  image.py  text.py
src/voitta_image_rag/services/parsers/: base.py  docx_parser.py  pdf_parser.py  pptx_parser.py  registry.py  svg_parser.py  text_parser.py
src/voitta_image_rag/services/sources/: __init__.py  base.py  registry.py
src/voitta_image_rag/services/sync/: __init__.py  github.py  (+1 more)
src/voitta_rag_desktop/: __init__.py  __main__.py  _gd_oauth.py  about_window.py  install_window.py  installer.py  shell.py
src/voitta_rag_desktop/resources/: requirements-lock.txt  voitta.icns
src/voitta_rag_enterprise/: __init__.py  config.py  logging_config.py  main.py  mcp_server.py
src/voitta_rag_enterprise/api/: __init__.py  deps.py  snapshot.py  ws.py
src/voitta_rag_enterprise/cas/: __init__.py  gc.py  store.py
src/voitta_rag_enterprise/db/: __init__.py  database.py  models.py  schema.sql
src/voitta_rag_enterprise/services/: __init__.py  acl.py  admin_scope.py  admin_store.py  asset_handlers.py  auth_providers.py  cad_mesh.py  cad_render.py  clerk.py  events.py  file_classify.py  folder_active.py  folder_stats.py  gpu_lock.py  groups.py  indexing.py  indexing_caps.py  job_queue.py  layout.py  markdown_extract.py  meta_sidecar.py  original_file.py  qdrant_process.py  reconcile.py  scanner.py  scheduler.py  signed_assets.py  source_meta.py  startup_recovery.py  vector_store.py  watcher.py  worker.py
static/: index.html  styles.css
static/css/: 01-base.css  02-buttons.css  03-tree.css  04-panels.css  05-modal.css  06-admin.css  07-preview.css
static/icons/: README.md
static/js/: api.js  boot.js  main.js  store.js  ws.js
static/js/components/: badges.js  chip_select.js
static/js/dom/: reconcile.js  switch.js
static/js/flows/: selection.js  toolbar.js  tree-model.js  upload.js
static/js/modals/: admin.js  login.js  new-folder.js  rename-folder.js  settings.js  sync.js
static/js/render/: icons.js  jobs.js  render-loop.js  sidebar.js  tabs.js  tree.js
terraform/: DEPLOYMENT_LOG.md  README.md
terraform/envs/example/: backend.tf.example  main.tf  terraform.tfvars.example  variables.tf
terraform/envs/voitta-demo/: main.tf  terraform.tfvars.example
terraform/modules/voitta-rag/: README.md  cloud-init.yaml.tftpl  cluster.tf  main.tf  outputs.tf  variables.tf  versions.tf  workload.tf
tests/: conftest.py  test_crypto.py
tests/integration/: test_acl_search.py  test_admin_endpoints.py  test_admin_scope_endpoints.py  test_admin_scope_session.py  test_admin_ws_scope.py  test_api_bearer_auth.py  test_api_keys.py  test_assets_route.py  test_auth_providers.py  test_content_routes.py  test_embed_orphans.py  test_embed_pipeline.py  test_file_image_acl.py  test_files.py  test_folder_stats.py  test_folders.py  test_fs_browser.py  test_gd_builtin.py  test_gd_list_folders_sa.py  test_google_login_callback.py  test_groups.py  test_health.py  test_indexing.py  test_job_retry.py  test_managed_folders.py  test_mcp_auth.py  test_mcp_server.py  test_mcp_tool_acl.py  test_mineru_daemon.py  test_mkdir.py  test_ownership_sharing.py  test_reconcile.py  test_reindex_bulk.py  test_rename_folder.py  test_route_auth_contract.py  test_scripts.py  test_search_route.py  test_single_user.py  test_sync_gdl_connect.py  test_watcher.py  (+1 more)
tests/unit/: test_acl.py  test_acl_grants.py  test_admin_scope.py  test_api_keys_identity.py  test_auth_allowlist.py  test_cad_fcstd_parser.py  test_cad_gltf_parser.py  test_cad_mesh_glb.py  test_cad_step_parser.py  test_cas.py  test_chunking.py  test_chunking_cad.py  test_cloud_local.py  test_company_api_keys.py  test_config.py  test_embedders.py  test_events.py  test_file_classify.py  test_folder_stats.py  test_gc.py  test_gdoc_markdown.py  test_google_drive_connector.py  test_google_drive_preflight.py  test_groups_service.py  test_ignore.py  test_indexing_caps.py  test_ipynb_parser.py  test_job_handlers_registry.py  test_job_progress.py  test_job_queue.py  test_js_static_checks.py  test_layout.py  test_mcp_models.py  test_meta_sidecar.py  test_microsoft_auth.py  test_ooxml_image_coverage.py  test_parsers.py  test_public_api_surface.py  test_qdrant_managed.py  test_rclone_connector.py  (+17 more)
tests/unit/chunking/: test_code.py  test_invariants.py  test_paragraph.py  test_registry.py
(+140 files in other folders)
