[project]
name = "voitta-image-rag"
version = "0.1.0"
description = "Filesystem-driven RAG with first-class image support."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "watchdog>=4.0",
    "pillow>=10.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "qdrant-client[fastembed]>=1.12",
    "fastmcp>=2.0",
    "email-validator>=2.0",
    "python-multipart>=0.0.9",
    "mineru[all]>=2.0",
    "cairosvg>=2.7",
    "openpyxl>=3.1",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "google-auth-oauthlib>=1.2",
    "google-cloud-kms>=3.0",
    "httpx>=0.28",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
    "mypy>=1.13",
]
ml = [
    "sentence-transformers>=3.2",
    "transformers>=4.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voitta_image_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning:swigvarlink",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Form",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/voitta_image_rag"]
