[project]
name = "voitta-rag-enterprise"
version = "0.1.0"
description = "Voitta RAG Enterprise — filesystem-driven RAG with first-class image support."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "watchdog>=4.0",
    "pillow>=10.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "qdrant-client[fastembed]>=1.12",
    "fastmcp>=2.0",
    "email-validator>=2.0",
    "python-multipart>=0.0.9",
    "mineru[all]>=2.0",
    "cairosvg>=2.7",
    "openpyxl>=3.1",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "google-auth-oauthlib>=1.2",
    "httpx>=0.28",
    "itsdangerous>=2.2",
    # Real text embedder backbone (e5-base-v2 via SentenceTransformer).
    # ``transformers`` and ``torch`` arrive transitively via mineru[all],
    # so adding this here is essentially a no-op install-size-wise — but
    # it keeps prod deploys from breaking the moment someone unsets
    # VOITTA_USE_FAKE_EMBEDDERS. Dev and CI use the fake embedder env var
    # and pay the install cost without ever loading the model.
    "sentence-transformers>=3.2",
    "transformers>=4.45",
    "tree-sitter-language-pack>=1.8",
    # CAD glTF parsing + headless mesh rendering. trimesh handles the
    # scene graph and subgraph isolation; pyrender + PyOpenGL+OSMesa do
    # the offscreen rasterization. Requires libosmesa6 on the host
    # (apt) — see deploy notes. Render-on-demand only; no upfront
    # rendering at index time, so the install cost is paid only by
    # files that actually carry glTF assets.
    "trimesh>=4.4",
    "pyrender>=0.1.45",
    "PyOpenGL>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
    "mypy>=1.13",
]
# Back-compat alias for ``pip install -e ".[ml]"`` references in older
# docs / scripts. The ml deps are now in core; this stays empty so the
# extra still resolves but installs nothing extra.
ml = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voitta_rag_enterprise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning:swigvarlink",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Form",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/voitta_rag_enterprise"]
