[project]
name = "voitta-rag-enterprise"
version = "0.1.0"
description = "Voitta RAG Enterprise — filesystem-driven RAG with first-class image support."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "watchdog>=4.0",
    "pillow>=10.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "qdrant-client[fastembed]>=1.12",
    "fastmcp>=2.0",
    "email-validator>=2.0",
    "python-multipart>=0.0.9",
    # MinerU's PIPELINE backend only (pp_doclayout — what pdf_parser.py uses).
    # NOT mineru[all]: on Linux that pulls in mineru[vllm] → the vllm GPU stack,
    # which (a) we never use — the app only runs the pipeline backend with
    # parse_method auto/txt/ocr — and (b) its tight pin tree drives pip's
    # resolver into ResolutionTooDeep on a clean build. The [pipeline] extra
    # brings torch + torchvision + transformers, which the pp_doclayout model
    # needs (without it PDF parsing dies on "No module named 'torchvision'").
    "mineru[pipeline]>=2.0",
    # SVG rasterization rides PyMuPDF (MuPDF statically linked). Do NOT
    # reintroduce cairosvg — it dlopen()s a system libcairo the packaged
    # desktop app doesn't ship, which broke every .svg on end-user Macs.
    "openpyxl>=3.1",
    # ``xlrd`` reads the legacy .xls (BIFF) binary format. SharePoint
    # tenants still carry plenty of these — old data dumps, exports
    # from systems that haven't been migrated, etc. Modern xlrd (>=2)
    # dropped .xlsx support; we use it strictly for .xls.
    "xlrd>=2.0",
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "google-auth-oauthlib>=1.2",
    "httpx>=0.28",
    "itsdangerous>=2.2",
    # HTML→markdown for sync connectors that render rich content (Jira issues,
    # Confluence pages, SharePoint Pages, OneNote). Each imports it with a crude
    # regex-strip fallback, but declaring it here means they get faithful
    # markdown (headings, bold, lists, tables) instead of the lossy fallback.
    "markdownify>=0.13",
    # Real text embedder backbone (e5-base-v2 via SentenceTransformer).
    # ``transformers`` and ``torch`` arrive transitively via mineru[pipeline],
    # so adding this here is essentially a no-op install-size-wise — but
    # it keeps prod deploys from breaking the moment someone unsets
    # VOITTA_USE_FAKE_EMBEDDERS. Dev and CI use the fake embedder env var
    # and pay the install cost without ever loading the model.
    "sentence-transformers>=3.2",
    "transformers>=4.45",
    "tree-sitter-language-pack>=1.8",
    # CAD: STEP / STP file parsing + on-demand rendering.
    #
    # ``cadquery-ocp`` ships OpenCASCADE 7.x Python bindings as a
    # self-contained pip wheel (~500 MB). Same kernel FreeCAD and
    # Creality Print use; we go straight to it via OCP without a
    # subprocess. Reader: ``STEPCAFControl_Reader``. Tessellator:
    # ``BRepMesh_IncrementalMesh``.
    #
    # ``vtk`` does the headless rasterization. PyPI Linux wheels
    # bake in software OpenGL, so renders work on any box without
    # apt/GPU/EGL setup. Wheel is ~80 MB.
    "cadquery-ocp>=7.7",
    "vtk>=9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
    "mypy>=1.13",
    "tqdm>=4.66",
]
# Back-compat alias for ``pip install -e ".[ml]"`` references in older
# docs / scripts. The ml deps are now in core; this stays empty so the
# extra still resolves but installs nothing extra.
ml = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voitta_rag_enterprise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning:swigvarlink",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Form",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/voitta_rag_enterprise"]
